vlib/v/checker/tests/globals/nested_unknown_typ.out
vlib/v/checker/tests/globals/nested_unknown_typ.vv:5:13: error: unknown type `StructS`
    3 |
    4 | @[markused]
    5 | __global ga []?StructS
      |             ^
