vlib/v/checker/tests/globals/nested_unknown_typ.vv
@[has_globals]
module main

@[markused]
__global ga []?StructS
